# napari-tomotwin

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  conda_env.yml  conda_env_noGPU.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: test.ipynb
src/napari_tomotwin/: __init__.py  anchor_tool.py  cluster_widget.py  common.py  load_umap.py  load_umap_widget.py  make_targets.py  make_targets_widget.py  napari.yaml  recursive_umap.py  target_manager.py  umap_refiner.py  umap_tool.py
src/napari_tomotwin/_qt/: labeled_progress_bar.py  load_umap.py  make_targets.py
src/napari_tomotwin/_tests/: test_load_umap.py  test_make_targets.py
