[metadata]
name = napari-tomotwin
description = Several tools for the work with TomoTwin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MPI-Dortmund/napari-tomotwin
author = Thorsten Wagner
author_email = twa1@posteo.de
license = MPL-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    tqdm
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-tomotwin = napari_tomotwin:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
